@@ -6,5 +6,6 @@ gem "erubis"
 gem "rack-test"
 gem "minitest"
 gem "redcarpet"
+gem "bcrypt"
 
 ruby "2.7.0"
