@@ -14,3 +14,5 @@
 2017 - Ruby 2.5 released.
 2018 - Ruby 2.6 released.
 2019 - Ruby 2.7 released.
+2020
+2021
