@@ -1,28 +1,58 @@
 ENV["RACK_ENV"] = "test"
 
+require "fileutils"
+
 require "minitest/autorun"
 require "rack/test"
+require 'bcrypt'
+
 
 require_relative "../cms"
 
 class CMSTest < Minitest::Test
   include Rack::Test::Methods
-
+  
   def app
     Sinatra::Application
   end
+  
+  def setup
+    FileUtils.mkdir_p(data_path)
+  end
+  
+  def teardown 
+    FileUtils.rm_rf(data_path)
+  end
+  
+  def create_document(name, content= "")
+    File.open(File.join(data_path, name), "w") do |file|
+      file.write(content)
+    end
+  end
+  
+  def session
+    last_request.env["rack.session"]
+  end
+  
+  def admin_session
+    { "rack.session" => {username: "admin"} }
+  end
 
   def test_index
+    create_document "about.md"
+    create_document "changes.txt"
+    
     get "/"
 
     assert_equal 200, last_response.status
     assert_equal "text/html;charset=utf-8", last_response["Content-Type"]
     assert_includes last_response.body, "about.md"
     assert_includes last_response.body, "changes.txt"
-    assert_includes last_response.body, "history.txt"
   end
   
-  def test_file
+  def test_viewing_text_document
+    create_document "history.txt", "Ruby 0.95 released"
+    
     get "/history.txt"
     
     assert_equal 200, last_response.status
@@ -30,25 +60,148 @@ class CMSTest < Minitest::Test
     assert_includes last_response.body, "Ruby 0.95 released"
   end
   
-  def test_document_not_found
-    get "/notafile.ext"
-    
-    assert_equal 302, last_response.status
-    
-    get last_response["Location"]
-    
-    assert_equal 200, last_response.status
-    assert_includes last_response.body, "notafile.ext does not exist"
-    
-    get "/"
-    refute_includes last_response.body, "notafile.ext does not exist"
-  end
-  
   def test_md_file
+    create_document "about.md", "# Ruby is..."
+    
     get "/about.md"
     
     assert_equal 200, last_response.status
     assert_equal "text/html;charset=utf-8", last_response["Content-Type"]
     assert_includes last_response.body, "<h1>Ruby is...</h1>"
+  end
+  
+  def test_document_not_found
+    get "/notafile.ext"
+    
+    assert_equal 302, last_response.status
+    assert_equal "notafile.ext does not exist.", session[:message]
+  end
+  
+  def test_editing_document
+    create_document "changes.txt"
+    
+    get "/changes.txt/edit", {}, admin_session
+    
+    assert_equal 200, last_response.status
+    assert_includes last_response.body, "<textarea"
+    assert_includes last_response.body, %q(<button type="submit")
+  end
+  
+  def test_editing_document_signed_out
+    create_document "changes.txt"
+    
+    get "/changes.txt/edit"
+    
+    assert_equal 302, last_response.status
+    assert_equal "You must be signed in to do that.", session[:message]
+  end
+  
+  def test_updating_document
+    post '/changes.txt', {content: "new content"}, admin_session
+    
+    assert_equal 302, last_response.status    
+    assert_equal "changes.txt has been updated.", session[:message]
+    
+    get "/changes.txt"
+    assert_equal 200, last_response.status
+    assert_includes last_response.body, "new content"
+  end
+  
+  def test_updating_document_signed_out
+    post "/changes.txt", {content: "new content"}
+    
+    assert_equal 302, last_response.status
+    assert_equal "You must be signed in to do that.", session[:message]
+  end
+  
+  def test_view_new_document_form
+    get "/new", {}, admin_session
+    
+    assert_equal 200, last_response.status
+    assert_includes last_response.body, "<input"
+    assert_includes last_response.body, %q(<button type="submit")
+  end
+  
+  def test_view_new_document_form_signed_out
+    get "/new"
+    
+    assert_equal 302, last_response.status
+    assert_equal "You must be signed in to do that.", session[:message]
+  end
+  
+  def test_create_new_document
+    post "/create", {filename: "test.txt"}, admin_session
+    assert_equal 302, last_response.status
+    assert_equal "test.txt has been created.", session[:message]
+    
+    get "/"
+    assert_includes last_response.body, "test.txt"
+  end
+  
+  def test_create_new_document_signed_out
+    post "/create", {filename: "test.txt"}
+    
+    assert_equal 302, last_response.status
+    assert_equal "You must be signed in to do that.", session[:message]
+  end
+  
+  def test_create_new_document_without_filename
+    post "/create", {filename: ""}, admin_session
+    assert_equal 422, last_response.status
+    assert_includes last_response.body, "A name is required"
+  end
+  
+  def test_deleting_document
+    create_document("test.txt")
+    
+    post "/test.txt/delete", {}, admin_session
+    assert_equal 302, last_response.status
+    assert_equal "test.txt has been deleted.", session[:message]
+    
+    get "/"
+    refute_includes last_response.body, %q(href="/test.txt")
+  end
+  
+  def test_deleting_document_signed_out
+    create_document("test.txt")
+    
+    post "/test.txt/delete"
+    assert_equal 302, last_response.status
+    assert_equal "You must be signed in to do that.", session[:message]
+  end
+  
+  def test_signin_form
+    get '/users/signin'
+    
+    assert_equal 200, last_response.status
+    assert_includes last_response.body, "<input"
+    assert_includes last_response.body, %q(<button type="submit")
+  end
+  
+  def test_signin
+    post '/users/signin', username: "admin", password: "secret"
+    assert_equal 302, last_response.status
+    assert_equal "Welcome!", session[:message]
+    assert_equal "admin", session[:username]
+  end
+  
+  
+  def test_sign_in_with_bad_credentials
+    post '/users/signin', username: "guest", password: "shhhh"
+    assert_equal 422, last_response.status
+    assert_nil session[:username]
+    assert_includes last_response.body, "Invalid credentials"
+  end
+  
+  def test_sign_out
+    get "/", {}, {"rack.session" => {username: "admin"} }
+    assert_includes last_response.body, "Signed in as admin"
+    
+    post '/users/signout'
+    assert_equal "You have been signed out.", session[:message]
+    
+    get last_response["Location"]
+    assert_nil session[:username]
+    assert_includes last_response.body, "Sign In"
   end
 end
