@@ -1,0 +1,3 @@
+{
+admin: $2a$12$bcP4ahkaJtUg4bDS6mSJI.ptK9zaTmzUon.QzDtZivTZUGAS4CEY.
+}
