@@ -1,0 +1,4 @@
+{
+developer: $2a$12$6x5t5N8qiQhp8HOIZ5IV8e0hcndLhGNhDMhPbgRYnELE2OrcWw4WK, 
+alex: $2a$12$eHp7z264XOBstH6BWajRrOLSUs4ZdYMyJMsorSS1GkBRvWJwxXt1a
+}
