@@ -1,8 +1,24 @@
-<% if session[:message] %>
-    <p><%= session.delete(:message) %></p>
-<% end %>
 <ul>
-  <% @files.each do |file|%>
-    <a href="/<%= file %>"><li><%= file %></li></a>
+  <% @files.each do |file| %>
+    <li>
+      <a href="/<%= file %>"><%= file %></a>
+      <a href="/<%= file %>/edit">edit</a>
+      <form class="inline" method="post" action="<%= file %>/delete">
+        <button type="submit">delete</button>
+      </form>
+    </li>
   <% end %>
 </ul>
+
+<p><a href="/new">New Document</a></p>
+
+<% if session[:username] %>
+  <form method="post" action="/users/signout">
+    <p class="user-status">
+      Signed in as <%= session[:username] %>.
+      <button type="submit">Sign Out</button>
+    </p>
+  </form>
+<% else %>
+  <p class="user-status"><a href="/users/signin">Sign In</a></p>
+<% end %>
